--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # ignore executable
 geckodriver*
 
+# ignore fcc query results
 *UL201932915978*
 
 # Created by https://www.gitignore.io/api/macos,jupyternotebook,vim
