--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 geckodriver*
 
 # ignore cached data
-data-cache/*
+*-cache/*
 
 # Created by https://www.gitignore.io/api/macos,jupyternotebook,vim
 # Edit at https://www.gitignore.io/?templates=macos,jupyternotebook,vim
